links fixed on astro-detail image page
next, need to fix the headings on the detail pages. They are all not centered, as well as main heading

--- a/nasa-app/src/app/components/astronomy-pic-detail/scss/_typography.scss
+++ b/nasa-app/src/app/components/astronomy-pic-detail/scss/_typography.scss
@@ -15,3 +15,8 @@
   @include normal-text;
   color: $darkmode-font-body;
 }
+
+a {
+  color: $darkmode-font-heading;
+  font-size: 18px;
+}
